# cpp_4sem

./: .gitignore  README
1_gmshIntro/: gmshBuild.sh
1_gmshIntro/tasks/: circle.cpp  cube.cpp  cylinder.cpp  thor.cpp
1_gmshIntro/tasks/circle/: circle.cpp
1_gmshIntro/tasks/cube/: cube.cpp
1_gmshIntro/tasks/custom_stl/: custom_stl.cpp
1_gmshIntro/tasks/cylinder/: cylinder.cpp
1_gmshIntro/tasks/thor/: thor.cpp
1_gmshIntro/utils/: utils.cpp
2_vtkvisual/tasks/: CMakeLists.txt  diamond_no_girdle.stl  task  task.cpp
3_fenics/tasks/: ddiamond.xml  ddiamond_facet_region.xml  ddiamond_physical_region.xml  diamond.msh  task.py
microproject/: CMakeLists.txt
microproject/include/glad/: glad.h
microproject/src/: Swarm.cpp  Swarm.h  example_functions.h  glad.c  main.cpp  visual.py
